# temp-pair-enocean

./: Cargo.toml  README.md  build.ps1  mikroe-click4-stm32f74.cfg
src/: main.rs  ring_buffer.rs  spi.rs  uart.rs
temp-pair-enocean/: Cargo.toml
temp-pair-enocean/src/: ambient_sensor.rs  blinky_led.rs  crc8.rs  enocean.rs  flash.rs  gpio_output.rs  hmi_display.rs  i2c.rs  main.rs  spi.rs  systick.rs  temp_display.rs  uart.rs
tpe-ring-buffer/: Cargo.toml
tpe-ring-buffer/src/: lib.rs
