[package]
name = "temp-pair-enocean"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
critical-section = { version = "1.2" }
stm32f7 = { version = "0.16", features = ["stm32f745"] }
tpe-ring-buffer = { path = "../tpe-ring-buffer" }
vcell = { version = "0.1" }
