[package]
name = "temp-pair-enocean"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
critical-section = { version = "1.2" }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
stm32f7 = { git = "https://github.com/stm32-rs/stm32-rs-nightlies.git", features = ["stm32f745"] }
tpe-ring-buffer = { path = "../tpe-ring-buffer" }
vcell = { version = "0.1" }
